[RW-966][risk=no] Load entire Visits tree (#1011)
* RW-966 get visits api changes

* RW-966 move loading of child nodes into component

* RW-966 start loading all children

* RW-966 add new api call for complete tree loads

* RW-966 build complete tree for visit criteria

* RW-966 add fullTree option to other CB components

* RW-966 fix import order

* RW-966 merge master

* RW-966 fix findParent function

* [RW-975][risk=no] adding csv for meds tree (#1008)

* RW-975 adding csv for meds.

* RW-975 adding meds criteria tree.

* [risk=no] Spacing fixes (#1005)

* RW-975 adding csv for meds.

* RW-975 adding meds criteria tree.

* [RW-941][risk=no] Update prod tickets, tweak demo command for first-time use (#1009)

* [risk=no] Make the add workspace card look clickable (#1004)

* [risk=no] Avoid some unnecessary linting, reduce duplication (#1010)

* RW-966 get visits api changes

* RW-966 move loading of child nodes into component

* RW-966 start loading all children

* RW-966 add new api call for complete tree loads

* RW-966 build complete tree for visit criteria

* RW-966 add fullTree option to other CB components

* RW-966 fix import order

* RW-966 merge master

* RW-966 fix findParent function

* RW-966 add new api call for complete tree loads

* RW-966 add fullTree option to other CB components

* RW-966 fix import order

* RW-966 merge master

* RW-966 get visits api changes

* RW-966 move loading of child nodes into component

* RW-966 start loading all children

* RW-966 add new api call for complete tree loads

* RW-966 add fullTree option to other CB components

* RW-966 merge master

* RW-966 make function name more descriptive

* RW-966 merge conflicts

--- a/ui/src/app/cohort-search/node/node.component.html
+++ b/ui/src/app/cohort-search/node/node.component.html
@@ -4,7 +4,7 @@
     <crit-node-info [node]="node"></crit-node-info>
   </div>
 
-  <ng-template *ngIf="node.get('group')"
+  <ng-template *ngIf="node.get('group') && !fullTree"
     [clrIfExpanded]="expanded"
     (clrIfExpandedChange)="loadChildren($event)">
     <ng-container [clrLoading]="loading">
@@ -16,6 +16,21 @@
         </div>
 
         <crit-node *ngFor="let item of children" [node]="item"></crit-node>
+      </div>
+    </ng-container>
+  </ng-template>
+
+  <!-- Loads the entire tree instead of loading children when the parent node is expanded -->
+  <ng-template *ngIf="node.get('group') && fullTree"
+    [clrIfExpanded]="expanded">
+    <ng-container>
+      <div class="node-list">
+        <!-- TODO: This error handling is a stub until we can get a designer to look at it -->
+        <div *ngIf="error" class="error">
+          <clr-icon shape="error-standard"></clr-icon>
+          <em>Failed to Load Criteria</em>
+        </div>
+        <crit-node *ngFor="let item of node.get('children')" [node]="item"></crit-node>
       </div>
     </ng-container>
   </ng-template>
