RW-887 add redux actions for tree search

--- a/ui/src/app/cohort-search/node-info/node-info.component.html
+++ b/ui/src/app/cohort-search/node-info/node-info.component.html
@@ -23,9 +23,8 @@
     [popperTrigger]="'hover'"
     [popperPlacement]="'bottom'"
     [popperDisabled]="!isTruncated"
-    class="name text-muted">
-    {{ displayName }}
-  </div>
+    class="name text-muted"
+    [innerHTML]="displayName | safeHtml"></div>
 
   <!-- COUNT -->
   <div *ngIf="nonZeroCount" class="count">
