--- a/ui/src/app/cohort-search/tree/tree.component.html
+++ b/ui/src/app/cohort-search/tree/tree.component.html
@@ -6,4 +6,5 @@
   <clr-icon shape="error-standard"></clr-icon>
   <em>Failed to Load Criteria</em>
 </div>
+<app-search-bar *ngIf="children" [tree]="children"></app-search-bar>
 <crit-node *ngFor="let item of children" [node]="item"></crit-node>
