[RW-1003][Risk=low] Disable actions on review or insufficient permissions

--- a/ui/src/app/views/cohort-list/component.css
+++ b/ui/src/app/views/cohort-list/component.css
@@ -67,3 +67,16 @@ clr-dropdown-menu {
 .card.item-card {
   justify-content: space-between;
 }
+
+.action-item.disabled {
+  color: #AAAFB4;
+  cursor: not-allowed;
+}
+
+.action-item.disabled:hover {
+  background-color: white;
+}
+
+.action-item.disabled {
+  outline: none;
+}
