--- a/ui/src/app/views/cohort-list/component.html
+++ b/ui/src/app/views/cohort-list/component.html
@@ -23,23 +23,26 @@
           </button>
           <clr-dropdown-menu *clrIfOpen>
             <button class="action-item"
-                    [routerLink]="['build']"
-                    [queryParams]="{criteria: cohort.criteria}">
+                    (click)="cloneCohort(cohort)"
+                    [class.disabled]="awaitingReview || !writePermission">
               <clr-icon shape="copy"></clr-icon>
               Clone
             </button>
             <button class="action-item"
-                    routerLink="{{cohort.id}}/edit">
+                    (click)="editCohort(cohort.id)"
+                    [class.disabled]="awaitingReview || !writePermission">
               <clr-icon shape="pencil"></clr-icon>
               Edit
             </button>
             <button class="action-item"
-                    routerLink="{{cohort.id}}/review">
+                    (click)="reviewCohort()"
+                    [class.disabled]="awaitingReview || !writePermission">
               <clr-icon shape="grid-view"></clr-icon>
               Review
             </button>
             <button class="action-item delete-button"
-                    (click)="deleteCohort(cohort)">
+                    (click)="deleteCohort(cohort)"
+                    [class.disabled]="awaitingReview || !writePermission">
               <clr-icon shape="trash"></clr-icon>
               Delete
             </button>
