--- a/ui/src/app/cohort-search/search-bar/search-bar.component.css
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.css
@@ -20,3 +20,10 @@ input {
     font-size: 12px;
     line-height: 1rem;
 }
+.btn.btn-warning-outline {
+    float: right;
+    height: 26px;
+    margin: 0 0 0 5px;
+    padding: 0;
+    min-width: auto;
+}
