[RW-1003][Risk=low] Disable actions on review or insufficient permiss… (#1016)
* [RW-1003][Risk=low] Disable actions on review or insufficient permissions

* PR Feedback

* Go back to routerLink

--- a/ui/src/app/views/cohort-list/component.html
+++ b/ui/src/app/views/cohort-list/component.html
@@ -24,22 +24,30 @@
           <clr-dropdown-menu *clrIfOpen>
             <button class="action-item"
                     [routerLink]="['build']"
-                    [queryParams]="{criteria: cohort.criteria}">
+                    [queryParams]="{criteria: cohort.criteria}"
+                    [class.disabled]="actionsDisabled"
+                    [disabled]="actionsDisabled">
               <clr-icon shape="copy"></clr-icon>
               Clone
             </button>
             <button class="action-item"
-                    routerLink="{{cohort.id}}/edit">
+                    routerLink="{{cohort.id}}/edit"
+                    [class.disabled]="actionsDisabled"
+                    [disabled]="actionsDisabled">
               <clr-icon shape="pencil"></clr-icon>
               Edit
             </button>
             <button class="action-item"
-                    routerLink="{{cohort.id}}/review">
+                    routerLink="{{cohort.id}}/review"
+                    [class.disabled]="actionsDisabled"
+                    [disabled]="actionsDisabled">
               <clr-icon shape="grid-view"></clr-icon>
               Review
             </button>
             <button class="action-item delete-button"
-                    (click)="deleteCohort(cohort)">
+                    (click)="deleteCohort(cohort)"
+                    [class.disabled]="actionsDisabled"
+                    [disabled]="actionsDisabled">
               <clr-icon shape="trash"></clr-icon>
               Delete
             </button>
