RW-1005 set min for number inputs

--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -25,7 +25,7 @@
         <div>and</div>
       </div>
       <div *ngIf="attrForm.value['operator'+i] === 'BETWEEN'" class="form-group">
-        <input type="number" [name]="'valueB'+i" [ngModel]="attr.operands[1]" required>
+        <input type="number" min="0" [name]="'valueB'+i" [ngModel]="attr.operands[1]" required>
         <span>{{units[node.get('subtype')]}}</span>
       </div>
     </div>
