RW-1005 add validation on operand input blur

--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -18,14 +18,14 @@
         </div>
       </div>
       <div *ngIf="attrForm.value['operator'+i] !== 'ANY'" class="form-group">
-        <input type="number" min="0" [name]="'valueA'+i" [ngModel]="attr.operands[0]" required>
+        <input type="number" min="0" [name]="'valueA'+i" [(ngModel)]="attr.operands[0]" (blur)="inputChange(i, 0)" required>
         <span *ngIf="units[node.get('subtype')]">{{units[node.get('subtype')]}}</span>
       </div>
       <div *ngIf="attrForm.value['operator'+i] === 'BETWEEN'" class="form-group">
         <div>and</div>
       </div>
       <div *ngIf="attrForm.value['operator'+i] === 'BETWEEN'" class="form-group">
-        <input type="number" min="0" [name]="'valueB'+i" [ngModel]="attr.operands[1]" required>
+        <input type="number" min="0" [name]="'valueB'+i" [(ngModel)]="attr.operands[1]" (blur)="inputChange(i, 0)" required>
         <span>{{units[node.get('subtype')]}}</span>
       </div>
     </div>
