--- a/ui/src/app/views/homepage/component.css
+++ b/ui/src/app/views/homepage/component.css
@@ -19,7 +19,7 @@
 }
 
 .left {
-  margin-left: 9rem;
+  margin-left: 7rem;
 }
 
 .right {
@@ -32,7 +32,7 @@
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.15);
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 3px 2px 0 rgba(0, 0, 0, 0.12);
-  margin-left: 9rem;
+  margin-left: 7rem;
   border: none;
 }
 
@@ -45,7 +45,7 @@
   font-weight: 500;
   line-height: 34px;
   margin-top: 2%;
-  margin-left: 1rem;
+  margin-left: 0.2rem;
 }
 
 .heading {
@@ -130,7 +130,7 @@
 .singleIcon {
   margin-top: 5%;
   height: 3rem;
-  margin-left:1.2rem;
+  margin-left: 1.2rem;
 }
 
 .btn-homepage {
@@ -155,14 +155,13 @@
 
 .footerTitle {
   height: 34px;
-  width: 688.13px;
   opacity: 0.87;
   color: #FFFFFF;
   font-size: 28px;
   font-weight: 500;
   line-height: 34px;
-  margin-left: 8.8rem;
-  margin-top: 2%;
+  margin-left: 8rem;
+  margin-top: 1.4rem;
 }
 
 .footerSubTitle {
@@ -170,7 +169,7 @@
 }
 
 .textGroup {
-  margin-left: 8.8rem;
+  margin-left: 8rem;
 }
 
 .footerText {
@@ -240,7 +239,7 @@
 }
 
 .footerLink {
-  margin-left: 53rem;
+  margin-left: 55rem;
   color: #FFFFFF;
 }
 
@@ -264,8 +263,8 @@
   height: 3.5rem;
   width: 7rem;
   position: relative;
-  margin-left: 4.5rem;
-  line-height: 65px;
+  margin-left: 2rem;
+  line-height: 85px;
 }
 
 .bottom-links {
@@ -298,29 +297,41 @@
 
   .linkGroup {
     margin-left: 23rem;
+    margin-top: 0.1rem;
   }
 
   .card .add-card {
-    margin-top: -0.2rem;
+    margin-top: -0.6rem;
   }
 
   .footerLink {
-    margin-left: 39rem;
+    margin-left: 30rem;
   }
 
+  .footerTitle {
+    margin-left: 10rem;
+  }
+
+  .logo {
+    margin-left: 5rem;
+  }
+
+  .textGroup {
+    margin-left: 10rem;
+  }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1280px) {
   .right {
-    margin-left: 15rem;
+    margin-left: 18rem;
   }
 
   .left {
-    margin-left: 15rem;
+    margin-left: 18rem;
   }
 
   .single {
-    margin-left: 6rem;
+    margin-left: 8.5rem;
   }
 
 }
@@ -332,6 +343,22 @@
 
   .single {
     margin-left: 13rem;
+  }
+
+  .footerText {
+    margin-left: 3rem;
+  }
+
+  .logo {
+    margin-left: 9rem;
+  }
+
+  .textGroup {
+    margin-left: 11rem;
+  }
+
+  .footerTitle {
+    margin-left: 14rem;
   }
 }
 
