Fix cohort name to open to review.

--- a/ui/src/app/views/cohort-list/component.css
+++ b/ui/src/app/views/cohort-list/component.css
@@ -80,3 +80,13 @@ clr-dropdown-menu {
 .action-item.disabled {
   outline: none;
 }
+
+.card.item-card .name {
+  cursor: pointer;
+  word-wrap: break-word;
+}
+
+.card.item-card .name.disabled {
+  cursor: not-allowed;
+  color: #AAAFB4;
+}
