--- a/ui/src/app/views/cohort-list/component.html
+++ b/ui/src/app/views/cohort-list/component.html
@@ -53,7 +53,11 @@
             </button>
           </clr-dropdown-menu>
         </clr-dropdown>
-        <div class="name">{{cohort.name}}</div>
+        <div class="name"
+             [class.disabled]="actionsDisabled"
+             (click)="actionsDisabled || openCohort(cohort)">
+          {{cohort.name}}
+        </div>
       </div>
       <div class="description">{{cohort.description}}</div>
     </div>
