--- a/ui/src/app/styles/cards.css
+++ b/ui/src/app/styles/cards.css
@@ -34,6 +34,7 @@
 .card.add-card.disabled {
   cursor: not-allowed;
   color: #AAAFB4;
+  opacity: 0.5;
 }
 
 .card.add-card .create-text {
@@ -43,7 +44,6 @@
   position: relative;
   margin-top: 10%;
   margin-left: 12%;
-  cursor: pointer;
 }
 
 .card.add-card .plus-circle {
