--- a/ui/src/app/views/signed-in/component.html
+++ b/ui/src/app/views/signed-in/component.html
@@ -38,7 +38,7 @@
       <button class="btn btn-primary nav-link"
           [class.active]="workspacesActive"
           routerLink="/workspaces"
-          [attr.disabled]="hasDataAccess"
+          [attr.disabled]="hasDataAccess ? null : true"
           (click)="sidenavToggle = false">My Workspaces</button>
       <button class="btn btn-primary nav-link"
           [class.active]="reviewWorkspaceActive"
