[RW-929][risk=no] Review column changes (#1030)
* RW-929 init update review column data

* RW-929 fixing new columns

* RW-929 update column data structure

* RW-929 add new columns to detail tabs component

* RW-929 fixing review test cases

* RW-929 fixing broken tests.

* RW-929 add PM to domain types

* RW-929 hide details div

* RW-929 fixed test cases.

* RW-929 correct ageAtEvent name

* RW-929 fixing ui.

* RW-929 fixing domain issue.

--- a/ui/src/app/cohort-review/detail-tabs/detail-tabs.component.html
+++ b/ui/src/app/cohort-review/detail-tabs/detail-tabs.component.html
@@ -22,7 +22,7 @@
           (onRowClick)="detailView($event)"
           >
         </app-detail-all-events>
-        <div class="details">
+        <div *ngIf="false" class="details">
           <h4>Details</h4>
           <div *ngIf="detailsLoading" class="spinner">Loading...</div>
           <div *ngIf="!detailsLoading && !details">No data</div>
@@ -31,7 +31,7 @@
             <div *ngIf="details.dataType == 'ParticipantVisit'"><b>End Date:</b> <small>{{ details.endDate | date:'yyyy-MM-dd HH:mm:ss' }}</small></div>
             <div><b>Standard Vocabulary:</b> <small>{{ details.standardVocabulary }}</small></div>
             <div><b>Standard Name:</b> <small>{{ details.standardName }}</small></div>
-            <div><b>Source Value:</b> <small>{{ details.sourceValue }}</small></div>
+            <div><b>Source Value:</b> <small>{{ details.valueSource }}</small></div>
             <div *ngIf="details.dataType == 'ParticipantDrug'"><b>Signature:</b> <small>{{ details.signature }}</small></div>
             <div><b>Source Vocabulary:</b> <small>{{ details.sourceVocabulary }}</small></div>
             <div><b>Source Name:</b> <small>{{ details.sourceName }}</small></div>
