[RW-1023][Risk=no] Fix cohort name to open to review. (#1028)
* Fix cohort name to open to review.

* Fix styling

* Fix add-card cursor

--- a/ui/src/app/views/cohort-list/component.css
+++ b/ui/src/app/views/cohort-list/component.css
@@ -47,6 +47,11 @@ clr-dropdown-menu {
   color: #216FB4;
 }
 
+.ellipsis-vertical.disabled {
+  color: #AAAFB4;
+  cursor: not-allowed;
+}
+
 .action-item {
   text-align: left;
   color: #4A4A4A;
@@ -79,4 +84,14 @@ clr-dropdown-menu {
 
 .action-item.disabled {
   outline: none;
+}
+
+.card.item-card .name {
+  cursor: pointer;
+  word-wrap: break-word;
+}
+
+.card.item-card .name.disabled {
+  cursor: not-allowed;
+  color: #AAAFB4;
 }
