--- a/ui/src/app/views/cohort-list/component.html
+++ b/ui/src/app/views/cohort-list/component.html
@@ -18,8 +18,8 @@
     <div>
       <div class="header-area">
         <clr-dropdown [clrCloseMenuOnItemClick]="false">
-          <button type="button" clrDropdownTrigger>
-            <clr-icon shape="ellipsis-vertical" class="ellipsis-vertical"></clr-icon>
+          <button type="button" [disabled]="actionsDisabled" clrDropdownTrigger>
+            <clr-icon shape="ellipsis-vertical" class="ellipsis-vertical" [class.disabled]="actionsDisabled"></clr-icon>
           </button>
           <clr-dropdown-menu *clrIfOpen>
             <button class="action-item"
@@ -53,7 +53,11 @@
             </button>
           </clr-dropdown-menu>
         </clr-dropdown>
-        <div class="name">{{cohort.name}}</div>
+        <div class="name"
+             [class.disabled]="actionsDisabled"
+             (click)="openCohort(cohort)">
+          {{cohort.name}}
+        </div>
       </div>
       <div class="description">{{cohort.description}}</div>
     </div>
