--- a/public-ui/src/app/views/pm/pm.component.html
+++ b/public-ui/src/app/views/pm/pm.component.html
@@ -1,4 +1,26 @@
-<h1> Todo Physical Measurements Page </h1>
+<div class="row">
+
+  <div class="col-xs-12">
+    <div class="page-header">
+      <div>
+        <h2> {{title}} Survey Module </h2>
+        <h4 class="view-sub-title">{{subtitle}} </h4>
+      </div>
+    </div>
+  </div>g
+
+</div>
+
+
+<div class="row">
+  <div *ngFor="let item of measurements" class="col-md-4 col-sm-6 col-xs-12">
+    <button (click)="showMeasurment(item)" class="btn btn-primary">{{item.button_text}}</button>
+  </div>
+</div>
+
+<div class="row white-card-box">
+
+  </div><h1> Todo Physical Measurements Page </h1>
 <p>
   <a target="_blank" href="https://projects.invisionapp.com/d/main/default/#/console/13577480/306624424/preview" >
     Link to Mock Up
