--- a/public-ui/src/app/views/survey-view/survey-view.component.html
+++ b/public-ui/src/app/views/survey-view/survey-view.component.html
@@ -102,7 +102,7 @@
 
           <div class="col-xs-12 col-sm-12">
             <div class="box-title"> Question {{i + 1}}</div>
-            <div class="box-sub-title question" innerHtml="{{ q.conceptName | highlightSearch : searchText.value}})">   </div>
+            <div class="box-sub-title question" innerHtml="{{ q.conceptName | highlightSearch : searchText.value}}">   </div>
           </div>
 
           <!-- Don't show this chart <div class="col-md-6 col-xs-12 col-sm-6 answers-bar-col">
@@ -123,7 +123,7 @@
           <div class="col-md-7 col-sm-5 col-xs-12 answer-list">
             <div  class="row"  [class.answer-active]="q.selectedAnswer && q.selectedAnswer.id === a.id" (click)="showAnswerGraphs(q, a)" *ngFor="let a of q.countAnalysis.results">
               <div class="answer-text col-sm-6 col-xs-12" >
-                <label innerHtml="{{a.stratum4 | highlightSearch : searchText.value }}"> {{a.stratum4}} </label>
+                <label innerHtml="({{a.stratum4 | highlightSearch : searchText.value }})"> ({{a.stratum4}}) </label>
               </div>
               <div class="answer-text col-sm-2 col-xs-12"  [class.answer-active]="q.selectedAnswer && q.selectedAnswer.id === a.id">
                 <label class="participant-count">{{a.countValue | number}}  </label>
