--- a/public-ui/src/app/views/quick-search/quick-search.component.html
+++ b/public-ui/src/app/views/quick-search/quick-search.component.html
@@ -38,9 +38,7 @@
               {{r.countValue | number}}
             </div>
             <p class="card-text bigger">
-              <em> <b>concepts </b></em>
-              <span *ngIf="searchText.value"> match your search. </span>
-              <span *ngIf="!searchText.value">in this domain.</span>
+              <span> matching medical concepts </span>
             </p>
 
             <div class="card-text bottom">
