--- a/public-ui/src/app/views/quick-search/quick-search.component.css
+++ b/public-ui/src/app/views/quick-search/quick-search.component.css
@@ -20,10 +20,15 @@
 }
 
 .card-text.bottom {
-    padding-bottom: .4rem;
+    padding-bottom: .2rem;
 }
 
 .bolder {
     font-weight: bold;
     font-size: 16px;
+}
+
+span {
+    display: inline-block;
+    margin: 3px 0;
 }
