--- a/public-ui/src/app/views/quick-search/quick-search.component.html
+++ b/public-ui/src/app/views/quick-search/quick-search.component.html
@@ -64,7 +64,7 @@
           </div>
           <p class="card-text bigger">
             <span> matching survey questions </span>
-            <span> {{ r.domainDesc }} </span>
+            <span class="domain-desc"> {{ r.domainDesc }} </span>
           </p>
 
 
