--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -129,8 +129,8 @@
         <div class="row">
           <div class="col-md-3 grid-header flex-xs-middle"> {{dbDomain.domainDisplay}}</div>
           <div class="col-md-2 grid-header flex-xs-middle"> Concept Id </div>
-          <div class="col-md-3 grid-header flex-xs-middle"> Number of participants </div>
-          <div class="col-md-3 grid-header flex-xs-middle info-text"> <clr-icon class="" shape="info-standard" class="is-solid"></clr-icon> What is SNOMED? </div>
+          <div class="col-md-2 grid-header flex-xs-middle"> Number of participants ({{totalParticipants | number}} total) </div>
+          <div class="col-md-4 grid-header flex-xs-middle info-text"> <clr-icon class="" shape="info-standard" class="is-solid"></clr-icon> What is SNOMED? </div>
           <div class="col-md-1 grid-header flex-xs-middle info-text"> View graphs </div>
 
         </div>
@@ -139,11 +139,11 @@
              [ngClass]="{'expanded-grid-row': r.expanded}" >
           <div class="col-md-3 flex-xs-middle" innerHtml="{{i+1}}. {{r.conceptName | highlightSearch : prevSearchText}}"> </div>
           <div class="col-md-2 flex-xs-middle" innerHtml="{{r.conceptId}}"> </div>
-          <div class="col-md-3 flex-xs-middle">
-            {{r.countValue | number }} out of {{totalParticipants | number}} participants
+          <div class="col-md-2 flex-xs-middle">
+            {{r.countValue | number }}
 
           </div>
-          <div class="col-md-3 flex-xs-middle">
+          <div class="col-md-4 flex-xs-middle">
             {{r.vocabularyId}} {{r.conceptCode}}
           </div>
           <div class="col-md-1 flex-xs-middle">
