--- a/public-ui/src/app/views/survey-view/survey-view.component.html
+++ b/public-ui/src/app/views/survey-view/survey-view.component.html
@@ -123,7 +123,7 @@
           <div class="col-md-7 col-sm-5 col-xs-12 answer-list">
             <div  class="row"  [class.answer-active]="q.selectedAnswer && q.selectedAnswer.id === a.id" (click)="showAnswerGraphs(q, a)" *ngFor="let a of q.countAnalysis.results">
               <div class="answer-text col-sm-6 col-xs-12" >
-                <label innerHtml="({{a.stratum4 | highlightSearch : searchText.value }})"> ({{a.stratum4}}) </label>
+                <label innerHtml="{{a.stratum4 | highlightSearch : searchText.value }}"> {{a.stratum4}} </label>
               </div>
               <div class="answer-text col-sm-2 col-xs-12"  [class.answer-active]="q.selectedAnswer && q.selectedAnswer.id === a.id">
                 <label class="participant-count">{{a.countValue | number}}  </label>
@@ -138,14 +138,22 @@
           </div>
 
           <div class="col-md-5 col-sm-7 col-xs-12 answer-charts">
-            <div class="row answer-charts-wrapper flex-items-xs-middle" *ngIf="q.selectedAnswer" >
+            <div class="row answer-charts-wrapper flex-items-xs-middle" *ngIf="q.selectedAnswer && q.selectedAnswer.stratum5 != 'NoData'" >
               <div class="chart-wrapper col-xs-12 col-sm-12">
                 <app-chart [analysis]="q.genderAnalysis" [selectedResult]="q.selectedAnswer" [backgroundColor]="'#D9E4EA'"></app-chart>
               </div>
               <div class="chart-wrapper age col-xs-12 col-sm-12">
-                <app-chart [analysis]="q.ageAnalysis" [selectedResult]="q.selectedAnswer" [backgroundColor]="'#D9E4EA'"></app-chart>
+                <app-chart [analysis]="q.ageAnalysis" [selectedResult]="q.selectedAnswer" [backgroundColor]="'#D9E4EA'" ></app-chart>
               </div>
 
+            </div>
+
+            <div class="row answer-charts-wrapper flex-items-xs-middle" *ngIf="q.selectedAnswer && q.selectedAnswer.stratum5 === 'NoData'" >
+              <div class="no-chart-wrapper col-xs-12 col-sm-12">
+              </div>
+              <p style="padding:10px;font-size: 20px;"> No further analyses data is available for this answer </p>
+              <div class="no-chart-wrapper col-xs-12 col-sm-12">
+              </div>
             </div>
           </div>
         </div> <!-- end collapsible answers -->
