public-ui-changes

--- a/public-ui/src/app/views/survey-view/survey-view.component.html
+++ b/public-ui/src/app/views/survey-view/survey-view.component.html
@@ -151,7 +151,7 @@
             <div class="row answer-charts-wrapper flex-items-xs-middle" *ngIf="q.selectedAnswer && q.selectedAnswer.stratum5 === 'NoData'" >
               <div class="no-chart-wrapper col-xs-12 col-sm-12">
               </div>
-              <p style="padding:10px;font-size: 20px;"> No further analyses data is available for this answer </p>
+              <p class="text-center" style="padding:10px;font-size: 20px;"> No further analyses data is available for this answer </p>
               <div class="no-chart-wrapper col-xs-12 col-sm-12">
               </div>
             </div>
